<resources>

    <string name="app_name" translatable="false">Market</string>
    <string name="product_price" translatable="false">%1$.2f €</string>
    <string name="product_price_on_sale">%1$.2f € <small class="sale">Sale</small></string>
    <string name="product_quantity_in_list" translatable="false">x %1$d</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="all_products">All Products</string>
    <string name="wishlist">Wishlist</string>
    <string name="shopping_list">Shopping List</string>
    <string name="shopping_history">Shopping History</string>
    <string name="title_activity_products">Products</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="add_to_shopping_list">Add to shopping list</string>
    <string name="enter_quantity_hint">Enter quantity</string>
    <string name="product_image">Image of the product</string>
    <string name="no_description">No description</string>
    <string name="product_quantity">Quantity: %1$d</string>
    <string name="product_availability">Availability: %1$d</string>
    <string name="no_products_available">No products available</string>
    <string name="stock_issues_title">Stock Issues</string>
    <string name="back_button">Back</string>
    <string name="empty_wishlist_text">Your wishlist is empty</string>
    <string name="remove_item">Remove</string>
    <string name="added_to_wishlist">Item added to wishlist</string>
    <string name="removed_from_wishlist">Item removed from wishlist</string>
    <string name="checkout">Checkout</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="out_of_stock_item">Item out of stock: %1$s</string>
    <string name="exceeded_stock">Requested quantity exceeds stock</string>
    <string name="exceeded_stock_item">Requested quantity exceeds available stock: %1$s</string>
    <string name="purchase_with_price">Purchase (%1$.2f €)</string>
    <string name="purchase_successful">Your purchase was successful</string>
    <string name="purchase_failed">Your purchase failed. Please try again.</string>
    <string name="added_to_shopping_list">Item added to shopping list</string>
    <string name="removed_from_shopping_list">Item removed from shopping list</string>
    <string name="remove_from_wishlist">Remove from wishlist</string>
    <string name="empty_shopping_list_text">Your shopping list is empty</string>
    <string name="empty_shopping_history_text">Your shopping history is empty</string>
    <string name="add">Add</string>
    <string name="increase_quantity">Increase quantity</string>
    <string name="decrease_quantity">Decrease quantity</string>
    <string name="invalid_quantity">Invalid quantity</string>
    <string name="category_filter">Filter</string>
    <string name="filter_categories">Filter by Category</string>
    <string name="apply_text">Apply</string>
    <string name="cancel_text">Cancel</string>
    <string name="sold_out">Sold Out</string>
    <string name="clear_wishlist">Clear Wishlist</string>
    <string name="clear_wishlist_confirmation_message">Are you sure you want to clear your entire wishlist? This action cannot be undone.</string>
    <string name="wishlist_cleared">Wishlist has been cleared.</string>
    <string name="clear_shopping_list">Clear Shopping List</string>
    <string name="clear_shopping_list_confirmation_message">Are you sure you want to clear your entire shopping list? This action cannot be undone.</string>
    <string name="shopping_list_cleared">Shopping list has been cleared.</string>
    <string name="clear_shopping_history">Clear Shopping History</string>
    <string name="clear_shopping_history_confirmation_message">Are you sure you want to clear your entire shopping history? This action cannot be undone.</string>
    <string name="shopping_history_cleared">Shopping history has been cleared.</string>
    <string name="sign_in_required">Sign in to use this feature.</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password (min 6 characters)</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_confirmation">Are you sure you want to sign out?</string>
    <string name="signing_up">Signing up…</string>
    <string name="sign_out_successful">You have been signed out.</string>
    <string name="signed_in_message">You are signed in as %1$s.</string>
    <string name="guest_message">You are browsing as a guest. Please sign in for a better experience.</string>
    <string name="sign_up_prompt">Don\'t have an account? Sign Up!</string>
    <string name="sign_up_prompt_link">Sign Up!</string>
    <string name="sign_in_prompt">Already have an account? Sign In!</string>
    <string name="sign_in_prompt_link">Sign In!</string>
    <string name="go_to_main_menu">Go to Main Menu</string>
    <string name="total_price">Total: %1$.2f €</string>
    <string name="item_count">%1$d items</string>
    <string name="unknown_date">Unknown date</string>
    <string name="preview_more">… +%1$d more</string>
    <string name="preview_items">%1$s</string>
    <string name="preview_items_with_more">%1$s %2$s</string>


</resources>