<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Main content -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sign_in_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_required"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/empty_shopping_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_shopping_list_text"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvShoppingList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            android:backgroundTint="@color/green"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:visibility="gone"/>
    </LinearLayout>

    <!-- ProgressBar centered on top of everything -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
</FrameLayout>
