<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#333333">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/detailImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/product_image" />

        <TextView
            android:id="@+id/detailName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            tools:text="Product Name"/>

        <TextView
            android:id="@+id/detailPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            tools:text="X.XX €" />

        <TextView
            android:id="@+id/detailPriceOnSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/discount_orange"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            tools:visibility="visible"
            tools:text="X.XX €"/>

        <TextView
            android:id="@+id/detailQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            tools:text="Quantity: X"/>

        <TextView
            android:id="@+id/detailDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="12dp"
            tools:text="This is a description of the product"/>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/wishListBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/add_to_wishlist"
                android:textColor="@color/purple_200"/>

            <Button
                android:id="@+id/shoppingListBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/add_to_shopping_list"
                android:textColor="@color/purple_200"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>